# blotto

./: blotto.opam  dune-project
blotto/backend/cli/src/: cli.ml  cli.mli  dune  import.ml  main.ml
blotto/backend/protocol/: blotto_backend_protocol_lib.ml  create_game.ml  create_game.mli  dune  get_game.ml  get_game.mli  get_games.ml  get_games.mli  get_scoreboard.ml  get_scoreboard.mli  get_ui_scoreboard.ml  get_ui_scoreboard.mli  list_users.ml  list_users.mli  recalculate_scoreboard.ml  recalculate_scoreboard.mli  register_user.ml  register_user.mli  remove_game.ml  remove_game.mli  rpc_intf.ml  rpc_intf.mli  rpc_intf_intf.ml  submit_entry.ml  submit_entry.mli  update_game.ml  update_game.mli  user_info.ml  user_info.mli
blotto/backend/rpc/: blotto_backend_rpc_lib.ml  blotto_backend_rpc_lib.mli  dune  import.ml  rpc_intf.ml
blotto/backend/server/src/: config.ml  config.mli  dune  import.ml  main.ml  server.ml  server.mli  state.ml  state.mli  user_token_generator.ml  user_token_generator.mli
blotto/client/protocol/: dune
blotto/client/server/: dune  server.ml
blotto/client/web-ui/: blotto_client_web_ui.ml  dune  index.html
blotto/frontend/protocol/: blotto_frontend_protocol_lib.ml  dune  import.ml  route.ml  route.mli  utils.ml  utils.mli  web_ui_route.ml  web_ui_route.mli
blotto/frontend/server/: blotto_frontend_server.ml  dune  server.mli
blotto/frontend/server/src/: blotto_frontend_server_lib.ml  config.ml  connection_state.ml  dune  import.ml  main.ml  resource.ml  resource.mli  response.ml  response.mli  rpc_implementations.ml  rpc_implementations.mli  server.ml  server.mli
blotto/frontend/web-ui/: alert.ml  alert.mli  api.ml  api.mli  api_intf.ml  app.ml  app.mli  blotto_frontend_web_ui.ml  dune  game_info_view.ml  game_info_view.mli  game_view.ml  game_view.mli  games_list.ml  games_list.mli  import.ml  index.html  index.ml  index.mli  index_view.ml  navigation_column.ml  navigation_column.mli  not_found.html  not_found.ml  pane.ml  pane.mli  path.ml  path.mli  router.ml  scoreboard_view.ml  style.css  submit_strategy.ml  submit_strategy.mli  user_registration.ml
blotto/frontend/web-ui/descriptions/: basic.md  first-win-tripled.md  index.md
blotto/kernel/: army.ml  army.mli  blotto_kernel_lib.ml  dune  email.ml  email.mli  entry.ml  evaluator.ml  evaluator.mli  game.ml  game.mli  game_id.ml  game_id.mli  game_info.ml  game_info.mli  rule.ml  rule.mli  scoreboard.ml  scoreboard.mli  time_ns_fix.ml  time_ns_fix.mli  ui_entry.ml  user.ml  user_data.ml  user_data.mli  user_token.ml  user_token.mli
blotto/protocol/: dune
blotto/server/: blotto_server.ml  dune
blotto/server/src/: dune  user_token_generator.ml  user_token_generator.mli
