(library
 (name blotto_backend_server_lib)
 (libraries
  core
  async
  async.log_extended
  blotto_kernel_lib
  blotto_backend_protocol_lib)
 (inline_tests
  (deps english-words.txt))
 (preprocess
  (pps ppx_jane)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps words.txt)
 (action
  (bash "%{bin:ocaml-embed-file} %{deps} -output embedded_files")))
