(library
 (name blotto_frontend_server_lib)
 (libraries
  core
  async
  async.log_extended
  async_rpc_kernel
  async_rpc_websocket
  cohttp-async
  blotto_kernel_lib
  blotto_backend_protocol_lib)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps
  ../../web-ui/blotto_frontend_web_ui.bc.js
  ../../web-ui/index.html
  ../../web-ui/not_found.html
  ../../web-ui/style.css)
 (action
  (bash "%{bin:ocaml-embed-file} %{deps} -output embedded_files")))
